--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,23 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #333;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #777;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #666;
+  cursor: pointer;
+}
+
 .linear-gradient {
   background: linear-gradient(
     179.14deg,
